# zera-json-helpers

./: CMakeLists.txt  README.md  zera-json-helpersConfig.cmake.in
.github/workflows/: buildAndTest.yml
zera-json-helpers-testlib/: CMakeLists.txt  zerajsonhelper.cpp  zerajsonhelper.h
zera-json-params/: CMakeLists.txt  main.cpp
zera-json-params/app/: CMakeLists.txt  main.cpp
zera-json-params/lib/: CMakeLists.txt  jsonstatefilepersistence.cpp  jsonstatefilepersistence.h  zera-json-params-state.h  zera-json-params-structure.cpp  zera-json-params-structure.h  zera-json-paramsConfig.cmake.in  zera-jsonfileloader.cpp  zera-jsonfileloader.h
zera-json-params/src/: jsonstatefilepersistence.cpp  jsonstatefilepersistence.h  zera-json-find.cpp  zera-json-find.h  zera-json-keycomparer.cpp  zera-json-keycomparer.h  zera-json-params-state.cpp  zera-json-params-state.h  zera-json-params-structure.cpp  zera-json-params-structure.h  zera-jsonfileloader.cpp  zera-jsonfileloader.h
zera-json-params/tests/: CMakeLists.txt  unittest-json-find.cpp  unittest-json-key-comparer.cpp  unittest-json-loader.cpp  unittest-json-state-file-persistence.cpp  unittest-structure-template.cpp  zerajsonhelper.cpp
zera-json-params/tests/json-test-files/: TEST_PERSISTENCE,LOAD_VALID_FILE.json  TEST_PERSISTENCE_STRUCTURE.json  TEST_STATE,VALIDATE_TYPE_ERRORS.json  TEST_TEMPLATE,MIN_LARGER_MAX.json  TEST_TEMPLATE,VALID.json  TEST_TEMPLATE,VALID_CONTENT.json  TEST_TEMPLATE,VALID_CONTENT_NESTED.json  TEST_TEMPLATE,VALID_CONTENT_NESTED_EXPECTED.json
zera-json-params/tests/json-test-invalid-files/: TEST_JSON_LOAD_INVALID.json
zera-json-params/unittest/: resources.qrc  template-unittest.cpp  type-unittest.cpp  unittest-json-loader.cpp  unittest-json-state-file-persistence.cpp  unittest-param.cpp  unittest-state.cpp  unittest-structure.cpp  unittest-template.cpp  zerajsonhelper.cpp  zerajsonhelper.h
zera-json-params/unittest/json-param-test-files/: test-param-error.json
zera-json-params/unittest/json-test-files/: TEST_JSON,FIND.json  TEST_JSON_LOAD.json  TEST_PARAMS,BOOL_INVALID_TYPE_DEFAULT.json  TEST_PARAMS,DEFAULT_MISSING.json  TEST_PARAMS,FLOAT_INVALID_DECIMALS.json  TEST_PARAMS,FLOAT_INVALID_TYPE_DEFAULT.json  TEST_PARAMS,INT_INVALID_TYPE_DEFAULT.json  TEST_PARAMS,MIN_MAX_DEFAULT_LIMITS.json  TEST_PARAMS,MIN_MAX_INVALID.json  TEST_PARAMS,MIN_MAX_MISSING.json  TEST_PARAMS,PROPERTY_INVALID.json  TEST_PARAMS,STRING_INVALID_TYPE_DEFAULT.json  TEST_PARAMS,TYPE_INVALID.json  TEST_PARAMS,TYPE_MISSING.json  TEST_PARAMS,VALID.json  TEST_PERSISTENCE,LOAD_INVALID_FILE.json  TEST_STATE,VALIDATE_LIMIT_ERRORS.json  TEST_STATE,VALID_ALL_TYPES.json  TEST_STATE,VALID_ALL_TYPES_DEFAULT.json  TEST_STRUCTURE,BOOL_INVALID_TYPE_DEFAULT.json  TEST_STRUCTURE,PROPERTY_INVALID.json  TEST_STRUCTURE,VALID_STRUCURE.json  TEST_TEMPLATE,INVALID_LINK.json  TEST_TEMPLATE,INVALID_TYPE.json  TEST_TEMPLATE,MIN_LARGER_MAX.json  TEST_TEMPLATE,VALID.json  TEST_TEMPLATE,VALID_ALL_TYPES.json  TEST_TEMPLATE,VALID_CONTENT.json  TEST_TEMPLATE,VALID_CONTENT_NESTED.json  TEST_TEMPLATE,VALID_CONTENT_NESTED_EXPECTED.json  TEST_TEMPLATE,VALID_CONTENT_RESOLVE_EXPECTED.json
zera-json-qml/: CMakeLists.txt  zera-json-qmlConfig.cmake.in
zera-json-qml/lib/: CMakeLists.txt  declarativejsonitem.cpp
zera-json-qml/tests/: CMakeLists.txt  resources.qrc  unittest-cpp.cpp
zera-json-qml/tests/json-test-files/: TEST_CPP,TYPE_LOAD_UNLOAD_COMPARE.json
zera-json-settings/lib/: CMakeLists.txt  jsonsettingsfile.cpp  jsonsettingsfile.h
